    TODO: Overhaul very old and out of date documentation
        TODO: Add documentation for ALERT:Title|Info syntax
        TODO: Add documentation about Uniform Type Identifiers
        TODO: Add documentation on reading dropped text from STDIN
    TODO: Resizable Progress Bar window
    TODO: Long GNU named params for command line tool, e.g. --some-option
    TODO: Test UTI stuff

    * Fixed bug where Status Item menu intermittently showed empty output
    * New high res images for documentation
    * Added example showing STATUSMENUICON: syntax in action
    * Migrated source to modern Objective-C syntax (literals, properties etc.)
    * Now using bindings for defaults
    * Implemented UI stuff making clear that UTIs exclude suffixes
    * Fixed issue where a status menu could display an empty menu if clicked repeatedly
    * Use UTI methods instead of deprecated imageFileTypes
    * Fixed issue where dropping text on an app wouldn't work with “Remain running after initial execution” off
    * Symlinks now resolved when adding files to Bundled Files list
    * Folder sizes are now calculated much faster (and asynchronously) when added to Bundled Files list
    * Arguments window now highlights arguments and argument groups in command preview field
    * New high resolution (1024x1024) icons
    * Added ALERT:\.+ syntax, which triggers a modal alert dialog
    * Author name argument is now used to generate default bundle identifier in command line tool
    * Dropped text input (NSPboardText) is now passed to script via STDIN, not as an argument. This allows differentiation between dropped text snippets and dropped files in applications that are made to handle both.
    * Fixed issue with generating icon from images on retina macs (IconFamily)
    * Fixed issue with broken icon image alpha channels (IconFamily)
    * Finder now refreshes display of overwritten applications
    * Better error handling in file operations